fixed 1. quto complete 2. When description is too long, display will be corrupted

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -68,10 +68,12 @@
 
 div .content_box{
 	margin: 10px 10px 0px 10px;	
+	width:800px;
+	height:150px;
 }
 
 div .img_box{
-	height:160px;
+	height:150px;
 	width:125px;
 	margin: 10px 20px 0px 10px;
 }
